@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.6-0.005
-Date: 2025-12-26
+Version: 3.6-0.006
+Date: 2026-01-19
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
@@ -66,7 +66,7 @@ Authors@R: c(person("Adrian", "Baddeley",
 	            role="ctb"))
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
 Depends: R (>= 3.5.0), spatstat.data (>= 3.1-9), spatstat.univar (>= 3.1-5), spatstat.geom (>= 3.6-1), spatstat.random (>= 3.4-2), stats, graphics, grDevices, utils, methods, nlme
-Imports: spatstat.utils (>= 3.2), spatstat.sparse (>= 3.1), goftest (>= 1.2-2), Matrix, abind
+Imports: spatstat.utils (>= 3.2-1), spatstat.sparse (>= 3.1), goftest (>= 1.2-2), Matrix, abind
 Suggests: sm, gsl, locfit, spatial, fftwtools (>= 0.9-8), spatstat.linnet (>= 3.3), spatstat.model (>= 3.4), spatstat (>= 3.4)
 Description: Functionality for exploratory data analysis and nonparametric analysis of
 	     spatial data, mainly spatial point patterns,
