@@ -18,4 +18,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2025-07-22" "3.5-2" 242 564 0 34447 6364
 "2025-09-22" "3.5-3" 242 565 0 34506 6364
 "2025-11-22" "3.6-0" 246 574 0 34848 6364
-"2025-12-26" "3.6-0.005" 246 575 0 34937 6364
+"2026-01-19" "3.6-0.006" 246 575 0 34937 6364
