@@ -525,7 +525,6 @@
   Robert Aue,
   Marcel Austenfeld,
   Sandro Azaele,
-  Malissa Baddeley,
   Guy Bayegnak,
   Colin Beale,
   Melanie Bell,
@@ -693,6 +692,7 @@
   Torben Tvedebrink,
   Kevin Ummer,
   Medha Uppala,
+  Malissa Usher,
   Andrew van Burgel,
   Tobias Verbeke,
   Mikko Vihtakari,
